--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
@@ -8,7 +8,7 @@
 								</a>
 	</li>
 	<li>
-		<a href (click)="logOut()">
+		<a (click)="logOut()">
 			<i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}
 		</a>
 	</li>
