--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -4022,6 +4022,7 @@ textarea.payer-details {
 
 .invoice-summary {
     height: 76px;
+    min-height: 76px;
     border-top: 1px solid  rgba(242, 242, 242, 1);
     border-bottom: 1px solid rgba(242, 242, 242, 1);
     position: relative;
@@ -4360,6 +4361,10 @@ textarea.payer-details {
     color: #F66600;
 }
 
+.table-invoice-items .remove-item {
+    color: #F66600;
+}
+
 .invoice-items-container {
     flex-grow: 2;
     overflow-y: auto;
@@ -4428,6 +4433,10 @@ textarea.payer-details {
 .table-payment-items tr.selectable:hover {
     cursor: pointer;
     background-color: #ededed;
+}
+
+.table-payment-items .remove-payment {
+    color: #F66600;
 }
 
 .invoice-edit-footer {
@@ -4700,4 +4709,93 @@ textarea.payer-details {
 .invoice-transfer-column {
     overflow-y: auto;
     height: 100%;
+}
+
+.add-invoice-payment-modal-body {
+    padding-left: 28px;
+}
+
+.add-invoice-payment-modal-body .row:first-child {
+    margin-top: 15px;
+}
+
+.add-invoice-payment-modal-body .row {
+    margin-top: 20px;
+    margin-left: 0px;
+}
+
+.add-invoice-payment-modal-body .modal-text {
+    height: 30px;
+    width: 138px;
+    line-height: 30px;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 13px;
+    color: #333333;
+    float: left;
+}
+
+.add-invoice-payment-modal-body .modal-payment-input {
+    height: 30px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(228, 228, 228, 1);
+    background-color: rgba(255, 255, 255, 1);
+    width: 164px;
+    float: left;
+}
+
+.add-invoice-payment-modal-body .modal-total-payment-amount {
+    margin-left: 17px;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 13px;
+    color: #999999;
+    float: left;
+    height: 30px;
+    line-height: 30px;
+}
+
+.add-invoice-payment-modal-body .modal-payment-method-select {
+    width: 164px;
+    height: 30px;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px;
+}
+
+.add-invoice-payment-modal-body .select-taxes-btn {
+    width: 99px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px;
+    color: #333333;
+    background: transparent;
+    margin: 0px;
+    padding: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(228, 228, 228, 1);
+    cursor: pointer;
+    float: left;
+    outline: none;
+}
+
+.add-invoice-payment-modal-body .select-taxes-btn.active {
+    background-color: #333333;
+    color: white;
+}
+
+.add-invoice-payment-modal-body .modal-notes-textarea {
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(228, 228, 228, 1);
+    background-color: rgba(255, 255, 255, 1);
+    background-color: transparent;
+    width: 295px;
+    height: 88px;
+    outline: none;
 }
