--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/related-invoices/template/related-invoices.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/related-invoices/template/related-invoices.html
@@ -13,12 +13,12 @@
         <i class="fa fa-download related-invoice-button m-r-8 clickable" (click)="downloadInvoice(relatedInvoice)"></i>
         <div class="related-invoice-info clickable" (click)="selectRelatedInvoiceIndex(i)">
             <div class="related-invoice-title">{{ 'Invoice' | translate }} {{ relatedInvoice.reference }}
-                <span *ngIf="relatedInvoice.isPaid()" class="invoice-status paid-invoice-status">{{ 'Paid' | translate }}</span>
-                <span *ngIf="relatedInvoice.isLossAccepted()" class="invoice-status loss-accepted-by-management-invoice-status">{{ 'Loss Management' | translate }}</span>
-                <span *ngIf="relatedInvoice.isUnpaid()" class="invoice-status unpaid-invoice-status">{{ 'Unpaid' | translate }}</span>
+                <span *ngIf="relatedInvoice.invoice.isPaid()" class="invoice-status paid-invoice-status">{{ 'Paid' | translate }}</span>
+                <span *ngIf="relatedInvoice.invoice.isLossAcceptedByManagement()" class="invoice-status loss-accepted-by-management-invoice-status">{{ 'Loss Management' | translate }}</span>
+                <span *ngIf="relatedInvoice.invoice.isUnpaid()" class="invoice-status unpaid-invoice-status">{{ 'Unpaid' | translate }}</span>
             </div>
             <div class="related-invoice-payer">{{ getPayerListString(relatedInvoice) }}</div>
-            <div class="related-invoice-total">{{ relatedInvoice.totalAmount }}</div>
+            <div class="related-invoice-total">{{ ccy }}{{ relatedInvoice.invoice.amountToPay }}</div>
         </div>
     </div>
 </div>
