--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -5,6 +5,7 @@
 		<invoice-overview
 			[relatedInvoices]="relatedInvoices"
     		[currentRelatedInvoiceIndex]="currentRelatedInvoiceIndex"
+			[invoiceOperationsPageData]="pageData"
 			(showRelatedInvoicesClicked)="showRelatedInvoices()"
 			(showInvoiceTransferClicked)="showInvoiceTransfer()"
 			(currentInvoiceChanged)="currentRelatedInvoiceIndex = $event"
@@ -14,6 +15,7 @@
 	<div class="full-height" *ngIf="shouldShowRelatedInvoices()">
 		<related-invoices
 			[relatedInvoices]="relatedInvoices"
+			[invoiceOperationsPageData]="pageData"
 			(backToInvoiceOverviewClicked)="showInvoiceOverview()"
 			(relatedInvoiceIndexSelected)="selectRelatedInvoiceIndex($event)"
 		>
@@ -23,6 +25,7 @@
 		<invoice-transfer
 			[relatedInvoices]="relatedInvoices"
     		[currentRelatedInvoiceIndex]="currentRelatedInvoiceIndex"
+			[invoiceOperationsPageData]="pageData"
 			(backToInvoiceOverviewClicked)="showInvoiceOverview()"
 		>
 		</invoice-transfer>
