--- a/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
+++ b/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
@@ -44,7 +44,7 @@
 		</div>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the sign up code' | translate }}</small></label>
 		<div class="text-left">
-			<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'Don\'t have a code yet? Click' | translate }} <a href="http://unitpal.dk/contact">{{ 'here' | translate }}</a> {{'to get one' | translate }}</small>
+			<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'Don\'t have a code yet? Click' | translate }} <a href="http://unitpal.com/contact">{{ 'here' | translate }}</a> {{'to get one' | translate }}</small>
 		</div>
 	</div>
 	<div>
