#504 Display how amount has been paid

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -96,14 +96,14 @@
                     <td>{{ 'TOTAL' | translate }}</td>
                     <td></td>
                     <td></td>
-                    <td>{{ ccySymbol }}{{ currentInvoice.invoice.amountToPay }}</td>
+                    <td>{{ ccySymbol }}{{ currentInvoice.invoice.amountPaid }} {{ "out of" }} {{ ccySymbol }}{{ currentInvoice.invoice.amountToPay }}</td>
                     <td></td>
                 </tr>
             </tfoot>
         </table>
     </div>
     <div class="invoice-edit-footer m-t-24">
-        
+
         <button *ngIf="hasInvoiceReinstateRight()" type="button" class="btn btn-danger" (click)="onReinstateInvoice()">
             <i class="fa fa-2x unitpal-font">+</i> {{ 'Reinstate Invoice' | translate }}
         </button>
@@ -111,7 +111,7 @@
         <button *ngIf="hasInvoicePayRight()" type="button" class="btn btn-primary m-l-8" (click)="onPayInvoice()">
             <i class="fa fa-2x unitpal-font rotate-45">L</i> {{ 'Pay Invoice' | translate }}
         </button>
-        
+
         <button *ngIf="hasInvoiceSetAsLossAcceptedByManagementRight()" type="button" class="btn btn-danger m-l-8" (click)="onLossByManagementInvoice()">
             <i class="fa fa-2x unitpal-font">+</i> {{ 'Loss Accepted By Management' | translate }}
         </button>
