#507 Added link to create a new invoice

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li class="clickable">{{ 'View Bookings' | translate }}</li>
                     <li *ngIf="hasInvoiceAddPaymentsRight()" class="clickable" (click)="openAddInvoicePaymentModal(payer)">{{ 'Add Payment' | translate }}</li>
-                    <li class="clickable">{{ 'Add Invoice' | translate }}</li>
+                    <li class="clickable" (click)="createNewInvoiceFor(payer)">{{ 'Add Invoice' | translate }}</li>
                     <li *ngIf="hasInvoiceEditPayersRight()" class="clickable" (click)="removePayer(payer)">{{ 'Remove Payer' | translate }}</li>
                 </ul>
             </div>
