#507 Minor fixes within the invocie page

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -95,7 +95,8 @@
                     <td>{{ 'TOTAL' | translate }}</td>
                     <td></td>
                     <td></td>
-                    <td>{{ ccySymbol }}{{ currentInvoice.invoice.amountPaid }} {{ "out of" }} {{ ccySymbol }}{{ currentInvoice.invoice.amountToPay }}</td>
+                    <td *ngIf="hasItems()">{{ ccySymbol }}{{ currentInvoice.invoice.amountPaid }} {{ "out of" }} {{ ccySymbol }}{{ currentInvoice.invoice.amountToPay }}</td>
+                    <td *ngIf="!hasItems()">{{ 'No items' | translate }}</td>
                     <td></td>
                 </tr>
             </tfoot>
