#507 DIsplay the transaction fee within the add payment modal

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/modal/templates/add-invoice-payment-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/modal/templates/add-invoice-payment-modal.html
@@ -20,12 +20,29 @@
         <button class="select-taxes-btn" (click)="applyFee=false" [ngClass]="{'active': !applyFee}">{{ 'No Fee' | translate }}</button>
     </div>
     <div class="row">
+        <span>
+            <span *ngIf="applyFee">
+                <b>
+                    <i class="fa" [ngClass]="selectedInvoicePaymentMethodVM.iconUrl"></i>
+                    {{selectedInvoicePaymentMethodVM.displayName | translate}}
+                </b> {{'has a transaction fee of' | translate}}:
+                <b *ngIf="transactionFeeIsFixed">{{ccySymbol}} {{ transactionFee.amount | price }}</b>
+                <b *ngIf="!transactionFeeIsFixed">{{ transactionFee.amount | percentage }}</b>.
+            </span>
+            <span><b>To pay </b>
+                <span *ngIf="applyFee">(transaction fee included)</span>
+                <span *ngIf="!applyFee"> (no transaction fee)</span>
+                 : <b>{{ccySymbol}} {{ priceToPayPlusTransactionFee | price }}</b>
+            </span>
+        </span>
+    </div>
+    <div class="row">
         <div class="modal-text">{{ 'Notes' | translate }}</div>
         <textarea class="modal-notes-textarea" [(ngModel)]="paymentNotes"></textarea>
     </div>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-primary" 
+	<button type="button" class="btn btn-primary"
 		(click)="addInvoicePayment()">
 		{{ 'Add Payment' | translate }}
 	</button>
