--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
@@ -13,10 +13,10 @@
         </div>
         <div class="invoice-transfer-payer-section m-r-16">
             <div class="payer-name">
-                {{ currentInvoice.getFirstPayerName() }}
+                {{ currentInvoice.firstPayerName }}
             </div>
             <div class="payer-email">
-                {{ currentInvoice.getFirstPayerEmail() }}
+                {{ currentInvoice.firstPayerEmail }}
             </div>
         </div>
         <div class="invoice-items-container m-t-12 m-r-16">
