--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/invoices-history/template/invoice-history-dashboard.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/invoices-history/template/invoice-history-dashboard.html
@@ -1,7 +1,6 @@
-<loading-component [isLoading]="isLoading"></loading-component>
-<div *ngIf="!isLoading" class="row full-height operational-box card">
+<div class="row full-height operational-box card">
     <div class="col-xs-9 overview-left full-height">
-        <lazy-loading-table 
+        <lazy-loading-table
             (onAdd)="openNewInvoice()"
             (onSelect)="selectInvoice($event)"
             (onEdit)="editInvoice($event)"
@@ -9,7 +8,7 @@
         </lazy-loading-table>
     </div>
     <div class="col-xs-3 operational-overview-right full-height">
-        <div class="row full-height" *ngIf="selectedInvoiceVM">
+        <div class="row full-height" *ngIf="selectedInvoiceVM && !isLoading">
             <invoice-details
                 [invoiceVM]="selectedInvoiceVM"
                 [ccy]="ccy"
